force-app/main/default/objects/Activity/fields/i__Email__c.field-meta.xml
<CustomField>
    <fullName>i__Email__c</fullName>
    <description>ID of the iHance Email object this Task was copied from.</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the iHance Email object this Task was copied from.</inlineHelpText>
    <label>Email</label>
    <length>18</length>
    <type>Text</type>
</CustomField>