force-app/main/default/objects/Activity/fields/i__EmailHasAttachments__c.field-meta.xml
<CustomField>
    <fullName>i__EmailHasAttachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the linked email have Attachments?</description>
    <inlineHelpText>Does the linked email have Attachments?</inlineHelpText>
    <label>Linked email has attachments?</label>
    <type>Checkbox</type>
</CustomField>