force-app/main/default/objects/Activity/fields/i__EmailId__c.field-meta.xml
<CustomField>
    <fullName>i__EmailId__c</fullName>
    <description>deprecated</description>
    <inlineHelpText>ID of the iHance Email object this Task was copied from.</inlineHelpText>
    <label>EmailId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>