force-app/main/default/objects/Activity/fields/Porcentaje_de_avance__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_avance__c</fullName>
    <label>Porcentaje de avance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>