force-app/main/default/objects/Activity/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <label>Responsable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandra Bojorquez</fullName>
            </value>
            <value>
                <fullName>Becky Saenz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>